# gnome_station_analysis

./: .gitignore  .setup.py.swp  FID_out.py  LICENSE.txt  README.md  Resonances fitting.ipynb  fit.py  resonances.py  setup.cfg  setup.py  t2_measurement-Copy1.ipynb  test.py
.ipynb_checkpoints/: Resonances fitting-checkpoint.ipynb
docs/: conf.py  gnome_station_analysis.html  index.html  modules.rst  search.js
docs/_build/doctrees/: environment.pickle  gnome_station_analysis.doctree  index.doctree  modules.doctree  setup.doctree
docs/_build/html/: .buildinfo  genindex.html  gnome_station_analysis.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  setup.html
docs/_build/html/_sources/: gnome_station_analysis.rst.txt  index.rst.txt
docs/gnome_station_analysis/: fit.html  functions.html  read.html  resonances.html
gnome_station_analysis/: __init__.py  fit.py  functions.py  read.py  resonances.py  test.py
gnome_station_analysis/tools/: import_data.py  time.py
