[metadata]
name = gnome_station_analysis
version = 0.1
description = GNOME station analysis tools.
description-file = README.md
license = MIT
author = GNOME team in Krakow
author_email = gregory.lukasiewicz@gmail.com
url = https://github.com/gregorylukasiewicz/gnome_station_analysis
long_description = file: README.md
long_description_content_type = text/markdown

[options]
install_requires =
    numpy
    scipy
    matplotlib
    regex
    glob2
python_requires = >=3.8

